force-app/main/default/objects/Training__c/fields/Certificate_valid_until_months__c.field-meta.xml
<CustomField>
    <fullName>Certificate_valid_until_months__c</fullName>
    <label>Certificate valid until (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>