force-app/main/default/objects/Training__c/fields/Requires_latest_certificate__c.field-meta.xml
<CustomField>
    <fullName>Requires_latest_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires latest certificate</label>
    <type>Checkbox</type>
</CustomField>