force-app/main/default/objects/Training__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Session</label>
    <referenceTo>Training_Session__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>