force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Service_Description__c</columns>
    <columns>Requirements__c</columns>
    <columns>Hours__c</columns>
    <columns>Requires_latest_certificate__c</columns>
    <columns>Audience__c</columns>
    <columns>Certificate_valid_until_months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>